<resources>
    <string name="app_name">NextOne</string>
    <string name="app_icon_description">NextOne App Icon</string>
    <string name="app_version">0.0.2-alpha</string>
    <string name="constants_next">Next</string>
    <string name="back_button_icon_description">Back</string>

    <string name="setup_language_icon_description">Current Language Icon</string>
    <string name="setup_language_title">Language</string>
    <string name="setup_language_summary_1">Select your language below</string>
    <string name="setup_language_selector_label">Language</string>
    <string name="setup_language_selector_default_text">System (Default)</string>

    <string name="setup_location_icon_description">Current Location Icon</string>
    <string name="setup_location_title">Location</string>
    <string name="setup_location_summary_1">Grant the app location access to allow it to quickly find bus stops and train stations around you.</string>
    <string name="setup_location_summary_2">No location data are collected or stored in or outside of the device.</string>
    <string name="setup_button_enable_location">Grant Location Access</string>

    <string name="setup_final_stage_icon_description">Loading Icon</string>
    <string name="setup_final_stage_title">Almost There</string>
    <string name="setup_final_stage_summary_1">Loading…</string>
    <string-array name="setup_final_stage_progress_messages">
        <item>Gathering all Bus Stops</item>
        <item>Parking buses into depot</item>
        <item>Stabling trains</item>
        <item>Minding some business</item>
    </string-array>
    <string name="setup_final_stage_progress_bar_description">Loading Bar</string>
    <string name="setup_button_final_stage_start">Let\'s Go!</string>

    <string name="permission_location_access_title">Location Access</string>
    <string name="permission_location_access_message">Granting the app location access will allow it to show you information about nearby bus stops and MRT stations</string>
    <string name="permission_fine_location_title">Precise Location</string>
    <string name="permission_fine_location_message">Granting precise location access will allow the app show you nearby bus stops and MRT stations with greater precision</string>

    <string name="menu_main_home">Home</string>
    <string name="menu_main_search">Search</string>
    <string name="menu_main_settings">Settings</string>

    <string name="home_tab_current">Current Location</string>
    <string name="home_tab_favourites">Favourites</string>

    <!--Preference/Settings Screen Text-->
    <string name="preference_category_customisation">Customisation</string>
    <string name="preference_customisation_language_title">App Language</string>
    <string name="preference_category_notifications">Notifications</string>

    <string name="preference_category_location">Location</string>
    <string name="preference_location_settings_title">Location Settings</string>
    <string name="preference_location_settings_summary">Change your location settings</string>
    <string name="preference_location_access_title">Location Access</string>
    <string name="preference_location_access_summary">Allows the app to retrieve your current location</string>
    <string name="preference_location_precision_title">Precise Location Access</string>
    <string name="preference_location_precision_summary">Allows the app to retrieve your location with higher precision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>