<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.setup.SetupLanguageFragment">

    <TextView
        android:id="@+id/setup_language_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="72dp"
        android:layout_marginStart="24dp"
        android:text="@string/setup_language_title"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setup_language_selector_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/setup_language_next_button"
        android:paddingHorizontal="32dp">

        <ImageView
            android:id="@+id/setup_language_icon"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:src="@drawable/ic_around_the_world"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/setup_language_description_1"
            android:contentDescription="@string/setup_language_icon_description"/>

        <TextView
            android:id="@+id/setup_language_description_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/setup_language_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/setup_language_summary_1"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/setup_language_selector_label"
            app:layout_constraintTop_toBottomOf="@id/setup_language_description_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_language_black_24dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/setup_language_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:text="@string/setup_language_selector_default_text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/setup_language_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constants_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="32dp"
        app:icon="@drawable/ic_arrow_forward_black_24dp"
        app:iconGravity="end"
        style="@style/Widget.Material3.Button.TonalButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>