<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setup_location_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/setup_location_back_button"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back_button_icon_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/setup_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/setup_location_title"
            android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
            app:layout_constraintStart_toEndOf="@id/setup_location_back_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/setup_location_title_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/setup_location_next_button">

        <ImageView
            android:id="@+id/setup_location_icon"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/ic_current_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/setup_location_description_1"
            android:contentDescription="@string/setup_location_icon_description"/>

        <TextView
            android:id="@+id/setup_location_description_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/setup_location_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/setup_location_summary_1"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <TextView
            android:id="@+id/setup_location_description_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/setup_location_description_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/setup_location_summary_2"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <Button
            android:id="@+id/setup_location_grant_access_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_button_enable_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setup_location_description_2"
            android:layout_marginVertical="32dp"
            app:icon="@drawable/ic_location_on_black_24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/setup_location_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constants_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="32dp"
        app:icon="@drawable/ic_arrow_forward_black_24dp"
        app:iconGravity="end"
        style="@style/Widget.Material3.Button.TonalButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>