<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".view.setup.SetupFinalStageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setup_final_stage_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/setup_final_stage_back_button"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back_button_icon_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/setup_final_stage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/setup_final_stage_title"
            android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
            app:layout_constraintStart_toEndOf="@id/setup_final_stage_back_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/setup_final_stage_title_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/setup_icon"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:src="@drawable/ic_undraw_loading_re_5axr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/setup_final_stage_description_1"
            android:contentDescription="@string/setup_final_stage_icon_description"/>

        <TextView
            android:id="@+id/setup_final_stage_description_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/setup_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/setup_final_stage_summary_1"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/setup_final_stage_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/setup_final_stage_description_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="32dp"
            android:contentDescription="@string/setup_final_stage_progress_bar_description"/>

        <Button
            android:id="@+id/setup_final_stage_start_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/setup_button_final_stage_start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setup_final_stage_description_1"
            android:layout_marginVertical="32dp"
            android:visibility="invisible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>